syntax = "proto3";

package types;

import weak "gogoproto/gogo.proto";
import "version.proto";
import "health.proto";

option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Task {
    string id = 1 [(gogoproto.customname) = "ID"];
    string name = 2;
    string command = 3;
    double cpus = 4;
    double disk = 5;
    double mem = 6;
    string image = 7;
    string network = 8;
    repeated PortMappings portMappings = 9;
    bool privileged = 10;
    repeated Parameter parameters = 11;
    bool forcePullImage = 12;
    repeated Volume volumes = 13;
    map<string, string> env = 14;
    map<string, string> labels = 15;
    repeated HealthCheck healthChecks = 16;
    string offerId = 17;
    string agentId = 18;
    string agentHostname = 19;
    string status = 20;
    string appId = 21;
    KillPolicy killPolicy = 22;
}

message PortMappings {
    uint32 port = 1;
    string protocol = 2;
}
